v3.30 - Thursday, August 10, 2006

- ADDED: File formats support is now in standalone Bio-Formats package
- ADDED: Native DICOM support (eliminates dependency on ImageJ)
- ADDED: Support for Olympus FluoView FV1000 (OIF & OIB) formats
- ADDED: Support for Andor Bio-Imaging Division TIFF format
- ADDED: Support for Encapsulated PostScript (EPS) format
- ADDED: Support for Amersham Biosciences GEL format
- ADDED: Support for Leica Image File Format (LIF)
- ADDED: Support for Nikon Electronic Format (NEF)
- ADDED: Support for Imaris (IMS) format
- ADDED: Support for Openlab RAW format
- ADDED: Support for OME-XML format
- ADDED: Option to use 3D texturing in volume rendering
- ADDED: Option to use nicer transparency blending

- TWEAK: Better initial guess for dataset name

- FIXED: Reversed Y-orientation in arbitrary slices
- FIXED: Eliminated dependency on QuickTime for MOV, PICT and Openlab LIFF
- FIXED: Eliminated dependency on Jakarta POI for Image-Pro IPW and Zeiss ZVI
- FIXED: Avoid horizontal scroll bar in task list for long status messages
- FIXED: Eliminate Java 1.5 XML parser warnings
- FIXED: Bug in text overlays
- FIXED: Other minor bugfixes


v3.22 - Tuesday, January 24, 2006

- ADDED: Interface for computing transform results with external system calls
- ADDED: Ability to switch between OpenGL and Direct3D modes on Windows

- FIXED: A few minor bugfixes


v3.21 - Monday, December 12, 2005

- ADDED: Support for Image Cytometry Standard (ICS) format

- FIXED: LZW compression now uses horizontal differencing


v3.20 - Tuesday, November 29, 2005

- ADDED: Rewrote TIFF export to save incrementally (uses much less memory)
- ADDED: Option to use LZW compression when exporting TIFF files
- ADDED: Support for Image-Pro Sequence (SEQ) format
- ADDED: Support for Image-Pro Workspace (IPW) format

- TWEAK: Smaller download size

- FIXED: Grayed out thumbnail generation stop button


v3.19 - Wednesday, November 9, 2005
